--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
                     #############################################################################
 
-                    def euclidean_distance(v1, v2):
-                        return np.sqrt( np.sum(   (v1 - v2)**2   )   )
+                    def activation_function(z):
+                        return np.where( z>=0, 1, 0  )
 
                     #############################################################################
 
