--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     
 
                     #############################################################################
-                    weights = array([ 0.  ,  0.01,  0.02,  0.01, -0.01,  0.  ,  0.01,  0.  , -0.01,
+                    weights = np.array([ 0.  ,  0.01,  0.02,  0.01, -0.01,  0.  ,  0.01,  0.  , -0.01,
                     0.  ,  0.01,  0.  , -0.01, -0.01, -0.01, -0.01])
 
                     bias = 0.0
