--- a/index.html
+++ b/index.html
@@ -239,7 +239,12 @@
                         test_x = get_np_conditions_vector()
                         the_pred = predict(test_x, weights, bias)
                         text1 = np.array2string( test_x , precision=2, separator=',', suppress_small=True)
-                        text3 = str( the_pred )
+                        if the_pred == 0:
+                            text3 = 'L'
+                        elif the_pred == 1:
+                            text3 = 'T'
+                        else:
+                            text3 = str( the_pred )
                         accum_res = "*******************\n" + "Predicted Class: " + text1 + "___"  + text3 + "\n"
                         ## pydom['mpl'].content =  accum_res
                         pydom["div#mpl"].html = accum_res
